[SUREFIRE-1463] integration tests should run on the top of JDK 9